# webapp

./: .aws-sam-ignore  .buildinfo  .coveragerc  .cursor-commit-env  .eslintrc.yml  .gitattributes  .gitignore  .gitmodules  .pylintrc  .samignore  AGENTS.md  AWS_README.md  ArchitectureDesign.html  CLAUDE.md  CODING_STANDARDS.html  CalculationReference.html  ClientLambdaAPI.html  DevSetupAmazonLinuxEC2.html  DevSetupUbuntu.html  DeveloperSetup.html  DeveloperSetup_Mac.html  DynamoDB.html  EnvironmentVariables.html  Installation.html  Local Development and Github Actions.html  MOVIE_METADATA.html  Makefile  Makefile.dev  MySQLSetup.html  NOTES_ON_SIMPLIFYING.html  ProcessingPhases.html  README.md  README_SAM.html  RELEASE_NOTES.md  ReleaseHistory.html  S3.html  Summary-of-changes.md  THEORY_OF_DESIGN.html  UserTutorial.html  VideoResizing.html  (+59 more)
.claude/: settings.json
.codex/: hooks.json
.cursor/: CURSOR_DESIGN.md  PROPOSED_CHANGES.md
.doctrees/: ArchitectureDesign.doctree  CODING_STANDARDS.doctree  CalculationReference.doctree  ClientLambdaAPI.doctree  DevSetupAmazonLinuxEC2.doctree  DevSetupUbuntu.doctree  DeveloperSetup.doctree  DeveloperSetup_Mac.doctree  DynamoDB.doctree  EnvironmentVariables.doctree  Installation.doctree  Local Development and Github Actions.doctree  MOVIE_METADATA.doctree  MySQLSetup.doctree  NOTES_ON_SIMPLIFYING.doctree  ProcessingPhases.doctree  README_SAM.doctree  ReleaseHistory.doctree  S3.doctree  THEORY_OF_DESIGN.doctree  UserTutorial.doctree  VideoResizing.doctree  WindowsDevSetup.doctree  configuring_aws.doctree  demo_mode.doctree  deploy_ec2.doctree  environment.pickle  gallery.doctree  gallery_learning_plan.doctree  index.doctree  movie_player.doctree  mv1.doctree  notes_on_resizing.doctree  optional-dict-keys-scan.doctree  requirements.doctree  resources.doctree  sam_notes.doctree  user story - tracking.doctree
.github/: CODEOWNERS  copilot-instructions.md
Development/: AnalysisResults.html  ArchitectureDesign.html  CODING_STANDARDS.html  ClientLambdaAPI.html  DevSetupAmazonLinuxEC2.html  DevSetupUbuntu.html  DeveloperSetup.html  DeveloperSetup_Mac.html  DynamoDB.html  EnvironmentVariables.html  FlaskAPI.html  Installation.html  LambdaWebMigration.html  Local Development and Github Actions.html  MOVIE_METADATA.html  NOTES_ON_SIMPLIFYING.html  ProcessingPhases.html  ReleaseProcess.html  S3.html  THEORY_OF_DESIGN.html  TechDebt.html  TrackpointCoordinateSystem.html  WindowsDevSetup.html  configuring_aws.html  demo_mode.html  deploy_ec2.html  gallery.html  gallery_learning_plan.html  index.html  movie_player.html  mv1.html  notes_on_resizing.html  optional-dict-keys-scan.html  resources.html  sam_notes.html  trim-design.html  user story - tracking.html
_sources/: DevSetupAmazonLinuxEC2.rst.txt  DevSetupUbuntu.rst.txt  DeveloperSetup.rst.txt  DeveloperSetup_Mac.md.txt  EnvironmentVariables.rst.txt  Installation.rst.txt  Local Development and Github Actions.rst.txt  MySQLSetup.rst.txt  README_SAM.md.txt  ReleaseHistory.rst.txt  S3.rst.txt  UserTutorial.rst.txt  VideoResizing.rst.txt  WindowsDevSetup.rst.txt  configuring_aws.md.txt  configuring_aws.rst.txt  demo_mode.rst.txt  deploy_ec2.rst.txt  gallery.rst.txt  index.rst.txt  movie_player.rst.txt  mv1.rst.txt  notes_on_resizing.md.txt  sam_notes.rst.txt  user story - tracking.rst.txt
_static/: README.md
aws-sam/: .gitignore  deploy-stage.bash  pyrightconfig.json  samconfig.toml  template.yaml
camera/: Makefile  Makefile2  README.md  camera.js  index.html  pyproject.toml  template.yaml
camera/src/camera_app/: camera.py  common.py  home.py  oidc.py  sessions.py
camera/src/camera_app/templates/: about.html  dashboard.html  error_generic.html  error_user_not_registered.html  help.html  login.html  privacy.html  terms.html
camera/src/sync/: base.html
demo/: generate_presigned_post.py
deploy/: Dockerfile  README  apikey.py  auth.py  bottle_api.py  bottle_app.py  clogging.py  constants.py  db.py  db_object.py  dbfile.py  dbmaint.py  demo.py  gravitropism.py  lambda_handler.py  mailer.py  main.py  paths.py  requirements.txt  s2.py  tracker.py
doc/: INSTALL.md  THEORY_OF_DESIGN.md  conf.py  gallery.md  gallery_learning_plan.md  movie_player.md  resources.md  user story - tracking.md
docs/: ArchitectureDesign.md  CalculationReference.rst  ClientLambdaAPI.md  DevSetupAmazonLinuxEC2.rst  DevSetupUbuntu.rst  Developer Setup Mac.md  DeveloperSetup.rst  DeveloperSetup_Mac.md  DynamoDB.rst  EnvironmentVariables.rst  FIX_DYNAMO_DB  Installation.rst  Local Development and Github Actions.rst  MOVIE_METADATA.rst  Makefile  MySQLSetup.rst  NOTES_ON_SIMPLIFYING.md  NOTES_ON_SIMPLIFYING.rst  ProcessingPhases.rst  README_SAM.md  ReleaseHistory.rst  S3.rst  THEORY_OF_DESIGN.rst  UserTutorial.rst  VideoResizing.rst  aws_sam_policy.json  conf.py  configuring_aws.md  configuring_aws.rst  demo_mode.rst  gallery_learning_plan.rst  index.rst  movie_player.rst  mv1.rst  notes_on_resizing.md  requirements.txt  sam_notes.rst  setting_up_dev_env.rst  trim-design.md  user story - tracking.rst
e2e/: ConsoleErrors.spec.js
etc/: .gitignore  Makefile  NOTES.md  authorized_keys.add  aws-sso-config  bootstrap.sh  cors.json  cors.xml  credentials_template.ini  database_name  deploy-dreamhost.bash  deploy.bash  fix_trailing_whitespace.py  github_actions_mysql_rootconfig.ini  hourly_test.bash  ifmt  maintenance.html  mp4_metadata.py  open_local_lambda_terminal.sh  patcher.py  planttracer-debug.service  planttracer-httpd-template.conf  planttracer-nginx-patch  planttracer-nginx-template.conf  planttracer-template.conf  planttracer-template.service  planttracer.service  quick_test.sh  reload-server.sh  (+20 more)
lambda-camera/: .gitignore  Makefile  README.md  index.html  pyproject.toml  samconfig.toml  style.css  template.yaml
lambda-camera/src/camera_app/: camera.py
lambda-camera/src/camera_app/static/: camera_chatgpt.js
lambda-camera/src/camera_app/templates/: base.html  error_generic.html  index.html
lambda-camera/src/sync/: 404.html  about.html  camera.js  camera_chatgpt.js  error_generic.html  index.html  site.css
(+488 files in other folders)
