[tool.poetry]
name = "deploy"
version = "1.1.0"
description = "PlantTracer webapp"
authors = [
    "Simson Garfinkel <simsong@acm.org>",
    "Steve Barber <sbarber2@gmail.com>"
]
license = "GPL"
readme = "README.md"
packages = [
    { include = "deploy" },
]

[tool.poetry.dependencies]
python = ">=3.13"
boto3 = ">=1.39.14,<2.0.0"
crossplane = "*"
cryptography = "*"
dnspython = ">=2.7.0,<3.0.0"
email-validator = ">=2.2.0,<3.0.0"
filetype = "*"
flask = "*"
gunicorn = "*"
itsdangerous = ">=2.2.0,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
magnum = "*"
opencv-python-headless = "*"
paramiko = ">=4.0.0,<5.0.0"
pydantic = "*"
pyjwt = ">=2.10.1,<3.0.0"
python-magic = "*"
requests = ">=2.32.4,<3.0.0"
tabulate = "*"
validate_email_address = "*"
apig-wsgi = "^2.20.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential"], version = "*"}
codecov = "*"
myst-parser = "*"
pylint = ">=3.3.8"
pyright = "*"
pytest-cov = ">=6.2.1,<7.0.0"
pytest = ">=8.4.1,<9.0.0"
sphinx = "*"
sphinx-book-theme = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-togglebutton = "*"
types-requests = "*"
localmail = "^0.5.0"
selenium = "^4.38.0"
pytest-mock = "^3.15.1"
pytest-env = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#app = "deploy.app.__main__:main" # Example if you restore this

[tool.pylint.main]
# Specify the Python version Pylint should assume for syntax checking.
py-version = "3.12"

[tool.pylint.messages_control]
# Disable specific messages by their symbolic name or message ID.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unspecified-encoding"
]

[tool.pylint.design]
# Set the maximum number of arguments for a function.
max-args = 10
# Set the maximum number of public methods in a class.
max-public-methods = 20

[tool.pyright]
pythonVersion = "3.13"
venvPath = "./"
venv = ".venv"
include = ["."]
exclude = [
  "**/build",
  "**/.aws-sam",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/__pycache__",
  "**/conftest.py"
]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["deploy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
 "deploy",
 "tests"
]
addopts = "-ra -q"
python_files = ["test_*.py"]
