[project]
name = "webapp"
version = "0.9.7.2"
description = "PlantTracer webapp"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Simson Garfinkel", email = "simsong@acm.org" },
    { name = "Steve Barber", email = "sbarber2@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[project.scripts]
sam-config-tool = "sam_config_tool:main"
sqs_cli = "sqs_cli:main"

[tool.poetry]
packages = [
    { include = "app", from = "src" },
    { include = "sam_config_tool.py", from = "etc" },
    { include = "sqs_cli.py", from = "lambda-resize/src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apig-wsgi = "^2.20.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.vm.dependencies]
crossplane = "*"
cryptography = "*"
dnspython = ">=2.7.0,<3.0.0"
email-validator = ">=2.2.0,<3.0.0"
filetype = "*"
flask = "*"
gunicorn = "*"
itsdangerous = ">=2.2.0,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
magnum = "*"
pydantic = "*"
pyjwt = ">=2.10.1,<3.0.0"
python-magic = "*"
requests = ">=2.32.4,<3.0.0"
tabulate = "*"
validate_email_address = "*"
html5lib = "^1.1"
html5validate = "^0.0.2"
boto3 = "^1.42.72"


[tool.poetry.group.lambda.dependencies]
# Dependencies only needed for the Lambda / lambda-resize (single source of truth)
# Pillow: resizing/rotate_zip; mutagen: MP4 metadata; pydantic: vendored app/schema; opencv: video/frames/tracking
Pillow = "^11.0.0"
mutagen = "*"
pydantic = "*"
opencv-python-headless = "*"
requests = ">=2.32.4,<3.0.0"
imageio = {extras = ["ffmpeg"], version = "^2.37.3"}

[tool.poetry.group.dev.dependencies]
setuptools = ">=30,<82"  # pkg_resources removed in 82; required by localmail
mutagen = "*"  # MP4 metadata for etc/mp4_metadata.py and tests
aws-lambda-powertools = {extras = ["utilities", "pydantic"], version = "*"}
boto3-stubs = {extras = ["essential"], version = "*"}
codecov = "*"
myst-parser = "*"
pylint = ">=3.3.8"
pyright = "*"
pytest-cov = ">=6.2.1,<7.0.0"
pytest = ">=8.4.1,<9.0.0"
sphinx = "*"
sphinx-book-theme = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-togglebutton = "*"
types-requests = "*"
localmail = "^0.5.0"
selenium = "^4.38.0"
pytest-mock = "^3.15.1"
pytest-env = "^1.2.0"
service_identity = "*"
filetype = "^1.2.0"
cfn-lint = "^1.43.4"
botocore = {extras = ["crt"], version = "^1.42.63"}
boto3 = "^1.42.72"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
# Specify the Python version Pylint should assume for syntax checking.
py-version = "3.12"
recursive = true
source-roots = ["src", "lambda-resize/src"]
init-hook = "import sys; sys.path.insert(0, 'lambda-resize/src');"
ignore-paths = [
    "^lambda-resize/src/.*$",
    "^resize_app/.*$"
]

[tool.pylint.messages_control]
# Disable specific messages by their symbolic name or message ID.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unspecified-encoding",
    "redefined-outer-name",
    "unused-argument",
    "invalid-name",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "fixme",
    "trailing-whitespace",      # AI does this
    "trailing-newlines",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-lines",
    "too-few-public-methods",
    "too-many-branches"
]

[tool.pylint.design]
max-args = 10
max-public-methods = 20

[tool.pylint.typecheck]
# av is a C extension used by lambda-resize; allow it so E0401 is not raised.
extension-pkg-allow-list = ["av"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "./"
venv = ".venv"
include = ["."]
exclude = [
  "**/build",
  "**/.aws-sam",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/__pycache__",
  "**/conftest.py"
]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["src", "lambda-resize/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["*_test.py", "test_*.py"]
norecursedirs = ["lib/ctools"]
log_cli = true

filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore:pkg_resources is deprecated:UserWarning",
]

markers = [
  "selenium: marks tests that require Selenium WebDriver (deselect with '-m \"not selenium\"')",
]

[tool.pytest.ini_options.env]
PYTEST = "1"