# Install optional dependencies with:
# pip install -e .[dev]


[project]
name = "camera"
version = "0.1.1"
description = "Time lapse camera for Plant Tracer"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3",
    "jinja2",
    "pydantic",
    "boto3-stubs[essential,route53,secretsmanager,dynamodb]"
]

[project.optional-dependencies]
dev = [
    "djlint",
    "pylint",
    "pyright",
    "pytest",
    "pip-tools",
    "pytest-cov",
    "ruff",
    "flask"
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["home_app"]

[tool.djlint]
profile = "jinja"
ignore = ["jinja-block","jinja-variable","J004", "J018"]
extend_exclude = "node_modules/**,.venv/**"
indent = 4

[tool.pylint]
# Specify the Python version Pylint should assume for syntax checking.
py-version = "3.13"
ignore-paths = [
    "src/home_app/e11/.*"
]
source-roots = [".."]
[tool.pylint.FORMAT]
max-line-length=200

[tool.pylint.messages_control]
# Disable specific messages by their symbolic name or message ID.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unspecified-encoding",
    "too-few-public-methods"

]

[tool.pylint.design]
# Set the maximum number of arguments for a function.
max-args = 10

# Set the maximum number of public methods in a class.
max-public-methods = 20

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = [
  "**/build",
  "**/.aws-sam",
  "**/.venv",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/__pycache__",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["src", "src/home_app", "src/home_app/e11.whl", "../"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
 "src",
 "tests",
 "../",
 "src/camera_app/e11.whl"]
addopts = "-ra -q"
